# tandemn-koi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE-HARNESS.md  ARCHITECTURE.md  E2E_REAL_GPU_PLAYBOOK.md  README.md  demo.py  pyproject.toml  requirements.txt
agent/tools/: agent_tools.py
bootstrap/: initialization.py
config/: hyperparameters.py
core/: candidate_graph.py  confidence_service.py  evidence_service.py  mechanism_registry.py
cost/: switch_cost.py
docs/: allocation_unit_accounting.md
executor/: executor.py
exploration/: eig.py
infra/: resource_map.py  telemetry.py
koi/: __init__.py  agent.py  costing.py  ensemble.py  intake.py  model_features.py  monitor.py  oracle.py  perf_rag.py  placement.py  resource_ledger.py  runtime_policy.py  runtime_state.py  schemas.py  server.py
koi/harness/: config.py  decision_utils.py  failures.py  feasibility.py  ids.py  p0.py  p1.py  p5j.py  packet_tools.py  pscale.py  pscale_menu.py  recent_failures.py  resources.py
koi/tools/: __init__.py  memory.py  orca_api.py  perfdb.py  physics.py  resources.py
learning/: regret.py  slow_loop.py
orchestrator/: fsm_states.py
prediction/: surrogate.py  tchebycheff.py
simulation/: demo_runtime.py  demo_scenarios.py  demo_server.py  mock_orca.py  perf_model.py  run_sim_tests.py  sim_ctl.py
simulation/static/demo/: app.js  index.html  styles.css
src/agent/: agent.py  llm_clients.py
src/agent/tools/: agent_tools.py
src/bootstrap/: edge_confidence_table.json  initialization.py  mechanism_seed_table.json
src/config/: hyperparameters.py
src/core/: candidate_graph.py  causal_graph_store_adapter.py  confidence_service.py  evidence_service.py  mechanism_registry.py  models.py
src/cost/: dro.py  switch_cost.py
src/executor/: executor.py
src/exploration/: eig.py
src/infra/: causal_graph.py  deployment_x.py  resource_map.py  telemetry.py
src/learning/: regret.py  slow_loop.py
src/orchestrator/: debug_logging.py  fsm_states.py  runner.py
src/prediction/: Surrogate.md  surrogate.py  tchebycheff.py
src/validation/: cusum.py  icp.py  quadrants.py  validator.py
tests/: test_agent.py  test_demo_perf_model.py  test_demo_runtime.py  test_demo_server.py  test_handler_idempotency.py  test_harness_p0.py  test_harness_p1.py  test_harness_p5j.py  test_harness_pscale.py  test_harness_pscale_menu.py  test_harness_recent_failures.py  test_memory.py  test_monitor.py  test_orca_api.py  test_outcome_idempotency.py  test_perfdb.py  test_physics.py  test_resource_ledger.py  test_resources.py  test_runtime_policy.py  test_runtime_state.py  test_schemas.py  test_server.py  test_startup_api_key.py
tests/smoke/: test_agent_specialist_smokes.py  test_agent_tools_smokes.py  test_causal_graph_adapter_smokes.py  test_core_smokes.py  test_deployment_x_smokes.py  test_eig_resource_smokes.py  test_executor_smokes.py  test_llm_client_smokes.py  test_prediction_smokes.py  test_runner_smokes.py  test_telemetry_smokes.py  test_validation_smokes.py
tools/: verify_hardening.sh
validation/: quadrants.py  validator.py
