[project]
name = "tandemn-intelligence"
version = "0.1.0"
description = "Koi — cluster scheduling and learning"
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub>=0.23.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tandemn-store",
]

[tool.uv.sources]
tandemn-store = { path = "../tandemn-store", editable = true }

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
