[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.12"
dependencies = [
    "ai-dynamo[mocker]==1.2.1",
    "huggingface_hub>=0.23.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0",
    "tandemn-store"
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true

[tool.uv.sources]
tandemn-store = { path = "../tandemn-store", editable = true }
